# dify-workflow-cli

./: .gitignore  AGENTS.md  README.md  README_EN.md  TODO.md  build_package.py  pyproject.toml  setup.py
dify_workflow/: __init__.py  checklist_checks.py  checklist_validator.py  cli.py  cli_config.py  cli_edit.py  cli_inspect.py  cli_ops.py  cli_remote.py  cli_shared.py  editor.py  frontend_validator.py  io.py  layout.py  layout_tree.py  mermaid.py  models.py  node_data_validator.py  node_validators_core.py  node_validators_extra.py  remote_client.py  remote_config.py  remote_service.py  scanner.py  validator.py
dify_workflow/agent/: __init__.py  editor.py  validator.py
dify_workflow/chat/: __init__.py  editor.py  validator.py
dify_workflow/chatflow/: __init__.py  editor.py  validator.py
dify_workflow/completion/: __init__.py  editor.py  validator.py
dify_workflow/model_config_validators/: __init__.py  agent_mode_validator.py  dataset_validator.py  model_validator.py  (+3 more)
docs/: analysis-call-chain.md  analysis-data-structures.md  analysis-dsl-structure.md  analysis-frontend-checklist.md  analysis-node-output-variables.md  architecture.md  cli-reference.md  testing.md  validation-coverage.md
tests/: test_agent.py  test_chat.py  test_chatflow.py  test_checklist_validator.py  test_cli.py  test_completion.py  test_editor.py  test_frontend_validator.py  test_integration.py  test_io.py  test_layout.py  test_mode_validation_integration.py  test_model_config_validators.py  test_models.py  test_node_data_validator.py  test_remote.py  test_remote_e2e.py  test_validator.py
(+32 files in other folders)
